Fixing spacing for half-sized images

--- a/assets/styles/pages/_photography.scss
+++ b/assets/styles/pages/_photography.scss
@@ -123,9 +123,15 @@
         }
         &-left {
           margin-left: columns(1,3);
+          &.half {
+            margin-left: columns(1,2);
+          }
         }
         &-right {
           margin-right: columns(1,3);
+          &.half {
+            margin-right: columns(1,2);
+          }
         }
       }
 
